chore: Add API endpoint for checking citizen information
