# routes/api.php
@@ -26,6 +26,7 @@ use App\Http\Controllers\Api\Client\CommentController;
 use App\Http\Controllers\Api\Client\OrderController;
 use App\Http\Controllers\Api\Client\PostController;
 use App\Http\Controllers\Api\Client\WalletController;
+use App\Http\Controllers\Api\PayOS\CheckCCCDController;
 use App\Http\Controllers\Api\Public\AuthorController;
 use App\Http\Controllers\Api\Public\BookController;
 use App\Http\Controllers\Api\Public\CategoryController;
@@ -332,6 +333,8 @@ Route::group([
             Route::put('/update/{id}', [CommentController::class, 'update']);
             Route::delete('/delete/{id}', [CommentController::class, 'destroy']);
         });
+
+        Route::post('/check-citizen', [CheckCCCDController::class, 'checkCCCD']);
     });
 
     Route::group([
